--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
-
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
-    
     <body>
-        <div id="header">
-            <a class="logo" href="index.html"><img src="http://lorempixel.com/200/200/" alt="Michigan State" /></a>
-        </div><!--end header-->
+            <div id="header">
+                    <ul>
+                        <li>Barons</li>
+                        <li><a class="logo" href="index.html"></a></li>
+                        <li>Inquest</li>
+                    </ul>
+                </div>
 
+            <div class="user-profile">
+                    <div class="profile-card">
+                      <h1 class="profile-card__title">Oliver Faatili</h1>
+                      <a href="https://github.com/poijanator" target="_blank"><p class="profile-card__subtitle">poijanator</p></a>
+                      <img class="profile-card__avatar" src="images/me.jpg" alt="Pic here"/>
+                    </div>
+                    <div class="profile-projects">
+                      <h2>Bart Veneman's projects</h2>
+                      <ol class="cards">
+
+                        <li>
+                            <a class="card" target="_blank" href="oliver.faatili.yoobee.net.nz/Final-xchc/xchc-final-site/">
+                            <h4 class="card__title">ASS 4 wordpress</h4>
+                            <p class="card__meta">7/06/2018</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a class="card" href="" target="_blank">
+                            <h4 class="card__title">CodePen.io</h4>
+                            <p class="card__meta">Updated</p>    
+                            </a>
+                        </li>
+
+                      </ol>
+                    </div>
+                  </div>
+
+
+
+
+
+
+
+
+        
+        <script src="" async defer></script>
     </body>
 </html>
