--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,25 +19,38 @@
 
             <div class="user-profile">
                     <div class="profile-card">
-                      <h1 class="profile-card__title">Oliver Faatili</h1>
-                      <a href="https://github.com/poijanator" target="_blank"><p class="profile-card__subtitle">poijanator</p></a>
-                      <img class="profile-card__avatar" src="images/me.jpg" alt="Pic here"/>
+                      <h1 class="profile-card__title">Website Design</h1>
+                      <a target="_blank"><p class="profile-card__subtitle">This is a list of all of the websites and code related stuff I have made.</p></a>
+                      <!--<img class="profile-card__avatar" src="images/me.jpg" alt="Pic here"/>-->
                     </div>
                     <div class="profile-projects">
-                      <h2>Bart Veneman's projects</h2>
                       <ol class="cards">
 
                         <li>
-                            <a class="card" target="_blank" href="oliver.faatili.yoobee.net.nz/Final-xchc/xchc-final-site/">
+                            <a id="ass4" class="card" target="_blank" href="http://oliver.faatili.yoobee.net.nz/Final-xchc/xchc-final-site/">
                             <h4 class="card__title">ASS 4 wordpress</h4>
                             <p class="card__meta">7/06/2018</p>
                             </a>
                         </li>
 
                         <li>
-                            <a class="card" href="" target="_blank">
-                            <h4 class="card__title">CodePen.io</h4>
-                            <p class="card__meta">Updated</p>    
+                            <a class="card" href="https://github.com/poijanator/vue-data-viz-api" target="_blank">
+                            <h4 class="card__title">Vue.js work</h4>
+                            <p class="card__meta">7/06/2018</p>    
+                            </a>
+                        </li>
+
+                        <li>
+                            <a class="card" href="https://github.com/poijanator/simple-video-player" target="_blank">
+                            <h4 class="card__title">Simple Video Player</h4>
+                            <p class="card__meta">6/06/2018</p>    
+                            </a>
+                        </li>
+                        
+                         <li>
+                            <a class="card" href="https://github.com/poijanator/Assignment-2" target="_blank">
+                            <h4 class="card__title">Transport Assignment</h4>
+                            <p class="card__meta">5/06/2018</p>    
                             </a>
                         </li>
 
